--- a/Drette.Tender/Views/Entries/Delete.cshtml
+++ b/Drette.Tender/Views/Entries/Delete.cshtml
@@ -22,26 +22,18 @@
         </div>
         <div class="row">
             <div class="col-xs-4 col-sm-3">
-                @Html.LabelFor(m => m.ActivityId)
+                @Html.LabelFor(m => m.ItemId)
             </div>
             <div class="col-xs-8 col-sm-9">
-                @Model.Activity.Name
+                @Model.Item.Name
             </div>
         </div>
         <div class="row">
             <div class="col-xs-4 col-sm-3">
-                @Html.LabelFor(m => m.Duration)
+                @Html.LabelFor(m => m.Price)
             </div>
             <div class="col-xs-8 col-sm-9">
-                @Model.Duration
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-4 col-sm-3">
-                @Html.LabelFor(m => m.Intensity)
-            </div>
-            <div class="col-xs-8 col-sm-9">
-                @Model.Intensity
+                @Model.Price
             </div>
         </div>
         @using (Html.BeginForm())
