--- a/Drette.Tender/Views/Shared/_Layout.cshtml
+++ b/Drette.Tender/Views/Shared/_Layout.cshtml
@@ -25,14 +25,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="@Url.Action("Index", "Entries")">
+                <a class="navbar-brand" href="@Url.Action("Index", "Inventories")">
                     @Html.Partial("_Logo", new ViewDataDictionary { { "element-id", "logo" } })
                     @applicationName
                 </a>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav"></ul>
-                @Html.Partial("_Menu")
+                <ul class="nav navbar-nav">
+                    <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Inventories" ? "active" : "")">@Html.ActionLink("Inventories", "Index", "Inventories")</li>
+                    <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Parts" ? "active" : "")">@Html.ActionLink("Parts", "Index", "Parts")</li>
+                    <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Shops" ? "active" : "")">@Html.ActionLink("Shops", "Index", "Shops")</li>
+                    <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Projects" ? "active" : "")">@Html.ActionLink("Projects", "Index", "Projects")</li>
+                </ul>
             </div>
         </div>
     </div>
