Updated Product view,s

--- a/Drette.Tender/Views/Inventories/Index.cshtml
+++ b/Drette.Tender/Views/Inventories/Index.cshtml
@@ -12,25 +12,35 @@
 <table class="table table-striped">
     <thead>
         <tr>
-            <th>Inventory</th>
-            <th>Product Name</th>
+            <th>Id</th>
+            <th>Compté</th>
+            <th>Suivi</th>
+            <th>Min</th>
+            <th>Max</th>
+            <th>Unité/lot</th>
+
             <th>&nbsp;</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var inventory in Model)
         {
-            <tr>
-                <td>@inventory.Id</td>
-                <td>@inventory.UnitQty</td>
-                <td>
-                    <div class="pull-right">
-                        <a href="@Url.Action("Detail", new { id = inventory.Id })" class="btn btn-primary btn-xs margin-right">
-                            <span class="glyphicon glyphicon-info-sign"></span><span class="hidden-xs"> Detail</span>
-                        </a>
-                    </div>
-                </td>
-            </tr>
+        <tr>
+            <td>@inventory.Id</td>
+            <td>@inventory.Count</td>
+            <td>@inventory.Follow</td>
+            <td>@inventory.UnitMinQty</td>
+            <td>@inventory.UnitMaxQty</td>
+            <td>@inventory.UnitQtyByLot</td>
+
+            <td>
+                <div class="pull-right">
+                    <a href="@Url.Action("Detail", new { id = inventory.Id })" class="btn btn-primary btn-xs margin-right">
+                        <span class="glyphicon glyphicon-info-sign"></span><span class="hidden-xs"> Detail</span>
+                    </a>
+                </div>
+            </td>
+        </tr>
         }
     </tbody>
 </table>
