--- a/Drette.Tender/Views/Shared/_Layout.cshtml
+++ b/Drette.Tender/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@{ 
-    var applicationName = "Tender";
+    var businessName = "Drette Software";
 }
 
 <!DOCTYPE html>
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - @applicationName</title>
+    <title>@ViewBag.Title - @businessName</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href="~/favicon.ico" rel="icon" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Secular+One" rel="stylesheet">
@@ -25,16 +25,20 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="@Url.Action("Index", "Inventories")">
+                <a class="navbar-brand" href="@Url.Action("Index", "Produtcs")">
                     @Html.Partial("_Logo", new ViewDataDictionary { { "element-id", "logo" } })
-                    @applicationName
+                    @businessName
                 </a>
             </div>
             <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav"></ul>
+                @Html.Partial("_Menu")
+            </div>
+            <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Products" ? "active" : "")">@Html.ActionLink("Products", "Index", "Products")</li>
                     <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Inventories" ? "active" : "")">@Html.ActionLink("Inventories", "Index", "Inventories")</li>
-                    <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Products" ? "active" : "")">@Html.ActionLink("Parts", "Index", "Parts")</li>
-                    <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Suppliers" ? "active" : "")">@Html.ActionLink("Shops", "Index", "Shops")</li>
+                    <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Suppliers" ? "active" : "")">@Html.ActionLink("Suppliers", "Index", "Suppliers")</li>
                     <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Projects" ? "active" : "")">@Html.ActionLink("Projects", "Index", "Projects")</li>
                 </ul>
             </div>
@@ -45,7 +49,7 @@
         @RenderBody()
         <footer>
             @Html.Partial("_Logo", new ViewDataDictionary { { "element-id", "footer_logo" } })
-            <p>&copy; @DateTime.Now.Year @applicationName, All Rights Reserved.</p>
+            <p>&copy; @DateTime.Now.Year @businessName, All Rights Reserved.</p>
         </footer>
     </div>
 
