--- a/Drette.Tender/Views/Inventories/Index.cshtml
+++ b/Drette.Tender/Views/Inventories/Index.cshtml
@@ -27,8 +27,8 @@
         {
         <tr>
             <td>@inventory.Id</td>
-            <td>@inventory.Count</td>
-            <td>@inventory.Follow</td>
+            <td>@inventory.Counted</td>
+            <td>@inventory.Followed</td>
             <td>@inventory.UnitMinQty</td>
             <td>@inventory.UnitMaxQty</td>
             <td>@inventory.UnitQtyByLot</td>
