Updated ProductsController to handle Detail view

--- a/Drette.Tender/Views/Products/Detail.cshtml
+++ b/Drette.Tender/Views/Products/Detail.cshtml
@@ -1,17 +1,74 @@
-﻿
+﻿@model Drette.Tender.Shared.Models.Product
 @{
-    Layout = null;
+    /**/
+
+    ViewBag.Title = "Détails du produit";
 }
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Detail</title>
-</head>
-<body>
-    <div> 
+@Html.Partial("_Message")
+<h2>@Model.Name</h2>
+<h3>Informations Principales</h3>
+<div class="row">
+    <div class="col-md-6">
+        <div class="row">
+            <div class="row">
+                <div class="row">
+                    <div class="col-xs-4 col-sm-4">
+                        @Html.LabelFor(m => m.ProductCode)
+                    </div>
+                    <div class="col-xs-8 col-sm-8">
+                        @Model.ProductCode
+                    </div>
+                </div>
+                <div class="col-xs-4 col-sm-4">
+                    @Html.LabelFor(m => m.Description)
+                </div>
+                <div class="col-xs-8 col-sm-8">
+                    @Model.Description
+                </div>
+            </div>
+            <div class="col-xs-4 col-sm-4">
+                @Html.LabelFor(m => m.ProductTypeId)
+            </div>
+            <div class="col-xs-8 col-sm-8">
+                @Model.ProductType.Name
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-4 col-sm-4">
+                @Html.LabelFor(m => m.SupplierId)
+            </div>
+            <div class="col-xs-8 col-sm-8">
+                @Model.Supplier.Name
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-4 col-sm-4">
+                @Html.LabelFor(m => m.Cost)
+            </div>
+            <div class="col-xs-8 col-sm-8">
+                @Model.Cost
+            </div>
+        </div>
     </div>
-</body>
-</html>
+    <div class="col-md-6">
+        <div>
+            @Html.LabelFor(m => m.Notes)
+        </div>
+        <div>
+            @(!string.IsNullOrWhiteSpace(Model.Notes) ? Model.Notes : "N/A")
+        </div>
+    </div>
+</div>
+
+
+<div class="pad-top">
+    <a href="@Url.Action("Edit", new { id = Model.Id })" class="btn btn-primary btn-lg margin-right">
+        <span class="glyphicon glyphicon-edit"></span> Edit
+    </a>
+    <a href="@Url.Action("Delete", new { id = Model.Id })" class="btn btn-danger btn-lg margin-right">
+        <span class="glyphicon glyphicon-trash"></span> Delete
+    </a>
+    <a href="@Url.Action("Index")" class="btn btn-default btn-lg">
+        <span class="glyphicon glyphicon-step-backward"></span> Back
+    </a>
+</div>
