--- a/Drette.Tender/Views/Shared/_Menu.cshtml
+++ b/Drette.Tender/Views/Shared/_Menu.cshtml
@@ -21,7 +21,7 @@
         </h5>
         <a href="@Url.Action("Add", "Products")" style="visibility: @GetButtonVisibility("Products", "Add")"
            class="btn btn-primary navbar-btn">
-            <span class="glyphicon glyphicon-plus"></span> Add Entry
+            <span class="glyphicon glyphicon-plus"></span> Entrée d'inventaire
         </a>
         using (Html.BeginForm("SignOut", "Account", FormMethod.Post, new { @class = "navbar-right" }))
         {
