--- a/Drette.Tender/Views/Products/Detail.cshtml
+++ b/Drette.Tender/Views/Products/Detail.cshtml
@@ -9,23 +9,26 @@
 <h3>Informations Principales</h3>
 <div class="row">
     <div class="col-md-6">
+
         <div class="row">
-            <div class="row">
-                <div class="row">
-                    <div class="col-xs-4 col-sm-4">
-                        @Html.LabelFor(m => m.ProductCode)
-                    </div>
-                    <div class="col-xs-8 col-sm-8">
-                        @Model.ProductCode
-                    </div>
-                </div>
-                <div class="col-xs-4 col-sm-4">
-                    @Html.LabelFor(m => m.Description)
-                </div>
-                <div class="col-xs-8 col-sm-8">
-                    @Model.Description
-                </div>
+            <div class="col-xs-4 col-sm-4">
+                @Html.LabelFor(m => m.ProductCode)
             </div>
+            <div class="col-xs-8 col-sm-8">
+                @Model.ProductCode
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-4 col-sm-4">
+                @Html.LabelFor(m => m.Description)
+            </div>
+            <div class="col-xs-8 col-sm-8">
+                @Model.Description
+            </div>
+        </div>
+
+        <div class="row">
             <div class="col-xs-4 col-sm-4">
                 @Html.LabelFor(m => m.ProductTypeId)
             </div>
@@ -33,6 +36,7 @@
                 @Model.ProductType.Name
             </div>
         </div>
+
         <div class="row">
             <div class="col-xs-4 col-sm-4">
                 @Html.LabelFor(m => m.SupplierId)
@@ -41,6 +45,7 @@
                 @Model.Supplier.Name
             </div>
         </div>
+
         <div class="row">
             <div class="col-xs-4 col-sm-4">
                 @Html.LabelFor(m => m.Cost)
@@ -49,7 +54,18 @@
                 @Model.Cost
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-xs-4 col-sm-4">
+                @Html.LabelFor(m => m.InventoryId)
+            </div>
+            <div class="col-xs-8 col-sm-8">
+                @Model.Inventory.Id
+            </div>
+        </div>
+
     </div>
+
     <div class="col-md-6">
         <div>
             @Html.LabelFor(m => m.Notes)
@@ -58,17 +74,22 @@
             @(!string.IsNullOrWhiteSpace(Model.Notes) ? Model.Notes : "N/A")
         </div>
     </div>
+
 </div>
 
 
 <div class="pad-top">
-    <a href="@Url.Action("Edit", new { id = Model.Id })" class="btn btn-primary btn-lg margin-right">
+
+    <a href="@Url.Action("Edit", new { id = Model.Id })" class="btn btn-primary btn-sm margin-right">
         <span class="glyphicon glyphicon-edit"></span> Edit
     </a>
-    <a href="@Url.Action("Delete", new { id = Model.Id })" class="btn btn-danger btn-lg margin-right">
+
+    <a href="@Url.Action("Delete", new { id = Model.Id })" class="btn btn-danger btn-sm margin-right">
         <span class="glyphicon glyphicon-trash"></span> Delete
     </a>
-    <a href="@Url.Action("Index")" class="btn btn-default btn-lg">
+
+    <a href="@Url.Action("Index")" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-step-backward"></span> Back
     </a>
+
 </div>
