Refactored and Updated Product and Inventory Models, Views and Controller

--- a/Drette.Tender/Views/Inventories/Index.cshtml
+++ b/Drette.Tender/Views/Inventories/Index.cshtml
@@ -15,7 +15,10 @@
             <th>Suivi</th>
             <th>Min</th>
             <th>Max</th>
-            <th>Unité/lot</th>
+            <th>En inventaire</th>
+            <th>Type d'unité</th>
+            <th>Quantité/unité</th>
+            <th>Emplacement</th>
 
             <th>&nbsp;</th>
         </tr>
@@ -29,7 +32,10 @@
             <td>@inventory.Followed</td>
             <td>@inventory.UnitMinQty</td>
             <td>@inventory.UnitMaxQty</td>
+            <td>@inventory.UnitQty</td>
+            <td>@inventory.Unit.Name</td>
             <td>@inventory.UnitQtyByLot</td>
+            <td>@inventory.Location</td>
 
             <td>
                 <div class="pull-right">
