--- a/Drette.Tender/Views/Products/Detail.cshtml
+++ b/Drette.Tender/Views/Products/Detail.cshtml
@@ -5,10 +5,19 @@
     ViewBag.Title = "Détails du produit";
 }
 @Html.Partial("_Message")
-<h2>@Model.Name</h2>
-<h3>Informations Principales</h3>
+<h2 class="pad-top">Détails du produit</h2>
+
 <div class="row">
     <div class="col-md-6">
+
+        <div class="row">
+            <div class="col-xs-4 col-sm-4">
+                @Html.LabelFor(m => m.Name)
+            </div>
+            <div class="col-xs-8 col-sm-8">
+                @Model.Name
+            </div>
+        </div>
 
         <div class="row">
             <div class="col-xs-4 col-sm-4">
