--- a/Drette.Tender/Views/Products/Index.cshtml
+++ b/Drette.Tender/Views/Products/Index.cshtml
@@ -36,6 +36,7 @@
                 <th>SKU</th>
                 <th>Fournisseur</th>
                 <th>Numéro d'inventaire</th>
+                <th>Quantité en inventaire</th>
                 <th>Coût</th>
 
                 <th>&nbsp;</th>
@@ -50,6 +51,7 @@
                 <td>@product.ProductCode</td>
                 <td>@product.Supplier.Name</td>
                 <td>@product.InventoryId</td>
+                <td>@product.Inventory.UnitQty</td>
                 <td>@product.Cost</td>
 
                 <td>
