--- a/Drette.Tender/Views/Products/Index.cshtml
+++ b/Drette.Tender/Views/Products/Index.cshtml
@@ -52,7 +52,7 @@
                 <td>@product.Supplier.Name</td>
                 <td>@product.InventoryId</td>
                 <td>@product.Inventory.UnitQty</td>
-                <td>@product.Cost</td>
+                <td>@product.Inventory.AverageCost</td>
 
                 <td>
                     <div class="pull-right">
