--- a/Drette.Tender/Views/Shared/_Menu.cshtml
+++ b/Drette.Tender/Views/Shared/_Menu.cshtml
@@ -19,7 +19,7 @@
         <h5 class="navbar-text" style="margin-top: 20px">
             Hello @User.Identity.GetUserName()!
         </h5>
-        <a href="@Url.Action("Add", "Products")" style="visibility: @GetButtonVisibility("Products", "Add")"
+        <a href="@Url.Action("Input", "Inventories")" style="visibility: @GetButtonVisibility("Inventories", "Input")"
            class="btn btn-primary navbar-btn">
             <span class="glyphicon glyphicon-plus"></span> Entrée d'inventaire
         </a>
