--- a/Drette.Tender/Views/Products/_ProductForm.cshtml
+++ b/Drette.Tender/Views/Products/_ProductForm.cshtml
@@ -25,6 +25,11 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(m => m.Product.SupplierProductCode, new { @class = "control-label" })
+            @Html.TextBoxFor(m => m.Product.SupplierProductCode, new { @class = "form-control" })
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(m => m.Product.ProductCode, new { @class = "control-label" })
             @Html.TextBoxFor(m => m.Product.ProductCode, new { @class = "form-control" })
         </div>
