--- a/Drette.Tender/Views/Shared/_Menu.cshtml
+++ b/Drette.Tender/Views/Shared/_Menu.cshtml
@@ -19,10 +19,17 @@
         <h5 class="navbar-text" style="margin-top: 20px">
             Hello @User.Identity.GetUserName()!
         </h5>
+
         <a href="@Url.Action("Input", "Inventories")" style="visibility: @GetButtonVisibility("Inventories", "Input")"
            class="btn btn-primary navbar-btn">
             <span class="glyphicon glyphicon-plus"></span> Entrée d'inventaire
         </a>
+
+        <a href="@Url.Action("Output", "Inventories")" style="visibility: @GetButtonVisibility("Inventories", "Output")"
+           class="btn btn-primary navbar-btn">
+            <span class="glyphicon glyphicon-plus"></span> Sortie d'inventaire
+        </a>
+
         using (Html.BeginForm("SignOut", "Account", FormMethod.Post, new { @class = "navbar-right" }))
         {
             @Html.AntiForgeryToken()
