Updated Produtcs related views

--- a/Drette.Tender/Views/Inventories/Output.cshtml
+++ b/Drette.Tender/Views/Inventories/Output.cshtml
@@ -28,11 +28,11 @@
     <div class="row">
         <div class="col-md-12">
             <div class="pad-top">
-                <button type="submit" class="btn btn-success btn-lg margin-right">
-                    <span class="glyphicon glyphicon-save"></span> Save
+                <button type="submit" class="btn btn-success btn-sm margin-right">
+                    <span class="glyphicon glyphicon-save"></span> Enregistrer
                 </button>
-                <a href="@Url.Action("Index")" class="btn btn-warning btn-lg">
-                    <span class="glyphicon glyphicon-remove"></span> Cancel
+                <a href="@Url.Action("Index")" class="btn btn-danger btn-sm">
+                    <span class="glyphicon glyphicon-remove"></span> Annuler
                 </a>
             </div>
         </div>
