--- a/Drette.Tender/Views/Products/Detail.cshtml
+++ b/Drette.Tender/Views/Products/Detail.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Drette.Tender.Shared.Models.Product
+    @using Drette.Tender.Shared.Models
 @{
     /**/
 
@@ -9,6 +10,15 @@
 
 <div class="row">
     <div class="col-md-6">
+
+        <div class="row">
+            <div class="col-xs-4 col-sm-4">
+                @Html.LabelFor(m => m.InventoryId)
+            </div>
+            <div class="col-xs-8 col-sm-8">
+                @Model.Inventory.Id
+            </div>
+        </div>
 
         <div class="row">
             <div class="col-xs-4 col-sm-4">
@@ -57,21 +67,31 @@
 
         <div class="row">
             <div class="col-xs-4 col-sm-4">
-                @Html.LabelFor(m => m.Cost)
+                @Html.LabelFor(m => m.Inventory.AverageCost)
             </div>
             <div class="col-xs-8 col-sm-8">
-                @Model.Cost
+                @Model.Inventory.AverageCost
             </div>
         </div>
 
         <div class="row">
             <div class="col-xs-4 col-sm-4">
-                @Html.LabelFor(m => m.InventoryId)
+                @Html.LabelFor(m => m.Date)
             </div>
             <div class="col-xs-8 col-sm-8">
-                @Model.Inventory.Id
+                @Model.Date
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-xs-4 col-sm-4">
+                @Html.LabelFor(m => m.User)
+            </div>
+            <div class="col-xs-8 col-sm-8">
+                @User.Identity.Name
+            </div>
+        </div>
+
 
     </div>
 
@@ -89,7 +109,7 @@
 
 <div class="pad-top">
 
-    <a href="@Url.Action("Edit", new { id = Model.Id })" class="btn btn-primary btn-sm margin-right">
+    <a href="@Url.Action("Edit", new { id = Model.Id })" class="btn btn-info btn-sm margin-right">
         <span class="glyphicon glyphicon-edit"></span> Edit
     </a>
 
@@ -97,7 +117,7 @@
         <span class="glyphicon glyphicon-trash"></span> Delete
     </a>
 
-    <a href="@Url.Action("Index")" class="btn btn-default btn-sm">
+    <a href="@Url.Action("Index")" class="btn btn-warning btn-sm">
         <span class="glyphicon glyphicon-step-backward"></span> Back
     </a>
 
