--- a/Drette.Tender/Views/Products/_ProductForm.cshtml
+++ b/Drette.Tender/Views/Products/_ProductForm.cshtml
@@ -39,6 +39,13 @@
             @Html.TextAreaFor(m => m.Product.Description, 14, 20, new { @class = "form-control" })
         </div>
 
+
+        <div class="form-group">
+            @Html.LabelFor(m => m.Product.Notes, new { @class = "control-label" })
+            @Html.TextAreaFor(m => m.Product.Notes, 14, 20, new { @class = "form-control" })
+        </div>
+
+
     </div>
 
 
