Updated ProductsController to handle Edit

--- a/Drette.Tender/Views/Products/Index.cshtml
+++ b/Drette.Tender/Views/Products/Index.cshtml
@@ -54,7 +54,7 @@
                 <td class="text-center">@product.Inventory.UnitQty</td>
                 <td class="text-center">@product.Inventory.AverageCost</td>
                 <td>@product.Date</td>
-                <td>@User.Identity.Name</td>
+                <td>@product.UserId</td>
 
                 <td>
                     <div class="pull-right">
