--- a/Drette.Tender/Views/Products/_ProductEditForm.cshtml
+++ b/Drette.Tender/Views/Products/_ProductEditForm.cshtml
@@ -45,7 +45,23 @@
             @Html.TextAreaFor(m => m.Product.Notes, 14, 20, new { @class = "form-control" })
         </div>
 
+        <div class="form-group hidden ">
+            @Html.LabelFor(m => m.Product.InventoryId, new { @class = "control-label" })
+            @Html.TextAreaFor(m => m.Product.InventoryId, new { @class = "form-control" })
+        </div>
+
+
+        <div class="form-group hidden">
+            @Html.LabelFor(m => m.Product.Date, new { @class = "control-label" })
+            @Html.TextAreaFor(m => m.Product.Date, new { @class = "form-control" })
+        </div>
+
+        <div class="form-group hidden">
+            @Html.LabelFor(m => m.Product.UserId, new { @class = "control-label" })
+            @Html.TextAreaFor(m => m.Product.UserId, new { @class = "form-control" })
+        </div>
 
     </div>
 
 </div>
+
