Reviewed the Inventories and Procucts Views

--- a/Drette.Tender/Views/Inventories/Index.cshtml
+++ b/Drette.Tender/Views/Inventories/Index.cshtml
@@ -39,7 +39,7 @@
             <td>@inventory.TotalCost</td>
             <td>@inventory.AverageCost</td>
             <td>@inventory.Unit.Name</td>
-            <td>@inventory.UnitQtyByLot</td>
+            <td>@inventory.Unit.Quantity</td>
             <td>@inventory.Location</td>
 
 
