--- a/Drette.Tender/Views/Products/Detail.cshtml
+++ b/Drette.Tender/Views/Products/Detail.cshtml
@@ -88,7 +88,7 @@
                 @Html.LabelFor(m => m.User)
             </div>
             <div class="col-xs-8 col-sm-8">
-                @User.Identity.Name
+                @Model.Inventory.UserId
             </div>
         </div>
 
