--- a/Drette.Tender/Views/Inventories/Detail.cshtml
+++ b/Drette.Tender/Views/Inventories/Detail.cshtml
@@ -67,10 +67,10 @@
 
         <div class="row">
             <div class="col-xs-4 col-sm-4">
-                @Html.LabelFor(m => m.UnitQtyByLot)
+                @Html.Label("Quantité par unité")
             </div>
             <div class="col-xs-8 col-sm-8">
-                @Model.UnitQtyByLot
+                @Model.Unit.Quantity
             </div>
         </div>
 
@@ -116,6 +116,15 @@
             </div>
             <div class="col-xs-8 col-sm-8">
                 @Model.LocationPrecision
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-4 col-sm-4">
+                @Html.LabelFor(m => m.UserId)
+            </div>
+            <div class="col-xs-8 col-sm-8">
+                @Model.UserId
             </div>
         </div>
 
