--- a/Drette.Tender/Views/Inventories/Edit.cshtml
+++ b/Drette.Tender/Views/Inventories/Edit.cshtml
@@ -43,6 +43,11 @@
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(m => m.Inventory.OrderMinQty, new { @class = "control-label" })
+        @Html.TextBoxFor(m => m.Inventory.OrderMinQty, new { @class = "form-control" })
+    </div>
+
+    <div class="form-group">
         @Html.LabelFor(m => m.Inventory.UnitId, new { @class = "control-label" })
         @Html.DropDownListFor(m => m.Inventory.UnitId,
         Model.UnitsSelectListItems, "", new { @class = "form-control" })
@@ -83,10 +88,7 @@
         @Html.TextAreaFor(m => m.Inventory.UnitQty, new { @class = "form-control" })
     </div>
 
-    <div class="form-group hidden">
-        @Html.LabelFor(m => m.Inventory.UnitQtyByLot, new { @class = "control-label" })
-        @Html.TextAreaFor(m => m.Inventory.UnitQtyByLot, new { @class = "form-control" })
-    </div>
+
 
 
 </div>
